// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.render(chat, node, options) make api calls 1`] = `
Object {
  "jobs": Array [
    Object {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": Object {
        "messages": Array [
          Object {
            "text": "Hello LINE",
            "type": "text",
          },
          Object {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": Object {
              "items": Array [
                Object {
                  "action": Object {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "to": "john_doe",
      },
      "url": "v2/bot/message/push",
    },
    Object {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": null,
      "url": "v2/bot/user/john_doe/richmenu/newbie",
    },
  ],
  "results": Array [
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": Object {
            "messages": Array [
              Object {
                "text": "Hello LINE",
                "type": "text",
              },
              Object {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": Object {
                  "items": Array [
                    Object {
                      "action": Object {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "to": "john_doe",
          },
          "url": "v2/bot/message/push",
        },
        Object {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": null,
          "url": "v2/bot/user/john_doe/richmenu/newbie",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`.render(chat, node, options) works with replyToken 1`] = `
Object {
  "jobs": Array [
    Object {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": Object {
        "messages": Array [
          Object {
            "text": "Hello LINE",
            "type": "text",
          },
          Object {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": Object {
              "items": Array [
                Object {
                  "action": Object {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "replyToken": "__REPLY_TOKEN__",
      },
      "url": "v2/bot/message/reply",
    },
    Object {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": null,
      "url": "v2/bot/user/john_doe/richmenu/newbie",
    },
  ],
  "results": Array [
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": Object {
            "messages": Array [
              Object {
                "text": "Hello LINE",
                "type": "text",
              },
              Object {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": Object {
                  "items": Array [
                    Object {
                      "action": Object {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "replyToken": "__REPLY_TOKEN__",
          },
          "url": "v2/bot/message/reply",
        },
        Object {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": null,
          "url": "v2/bot/user/john_doe/richmenu/newbie",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`.renderMulticast(channel, userIds, message) make api call to message/mulitcast 1`] = `
Object {
  "jobs": Array [
    Object {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line.multicast",
      "method": "POST",
      "params": Object {
        "messages": Array [
          Object {
            "text": "Hello LINE",
            "type": "text",
          },
          Object {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": Object {
              "items": Array [
                Object {
                  "action": Object {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "to": Array [
          "john",
          "wick",
          "dog",
        ],
      },
      "url": "v2/bot/message/multicast",
    },
    Object {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line.multicast",
      "method": "POST",
      "params": Object {
        "richMenuId": "newbie",
        "userIds": Array [
          "john",
          "wick",
          "dog",
        ],
      },
      "url": "v2/bot/richmenu/bulk/link",
    },
  ],
  "results": Array [
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line.multicast",
          "method": "POST",
          "params": Object {
            "messages": Array [
              Object {
                "text": "Hello LINE",
                "type": "text",
              },
              Object {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": Object {
                  "items": Array [
                    Object {
                      "action": Object {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "to": Array [
              "john",
              "wick",
              "dog",
            ],
          },
          "url": "v2/bot/message/multicast",
        },
        Object {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line.multicast",
          "method": "POST",
          "params": Object {
            "richMenuId": "newbie",
            "userIds": Array [
              "john",
              "wick",
              "dog",
            ],
          },
          "url": "v2/bot/richmenu/bulk/link",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;
